--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
 											<strong class="title"><a href="kabar-sekolah-detail.html"><b>SELAMAT DATANG WEBSITE RESMI SMKN 1 BERAU</b></a>
 											<small>Terbit pada tanggal 10 Desember 2013 | <a href="kabar-sekolah-detail.html#komentar">3 Komentar</a></small>
 											</strong>
-											<q>Kami keluarga besar SMKN 1 Berau turut berbahagia atas launchingnya website sekolah kami yang dapat diakses langsung pada http://smkn1berau.sch.id. Semoga website ini kedepannya dapat membantu banyak hal terutama dalam penyampaian informasi kepada siswa, guru, maupun warga di luar sekolah. Website ini dibuat sebagai media komunikasi dan kepek... </q> <a href="kabar-sekolah-detail.html">Baca selengkapnya...</a>
+											<q>Kami keluarga besar SMKN 1 Berau turut berbahagia atas launchingnya website sekolah kami yang dapat diakses langsung pada http://smkn1berau.sch.id. Semoga website ini kedepannya dapat membantu banyak hal terutama dalam penyampaian informasi kepada siswa, guru, maupun warga di luar sekolah. Website ini dibuat sebagai media komunikasi dan kepek... </q> <a href="kabar-sekolah-detail.html"></a>
 										</div>
 									</blockquote>
 								</div>
@@ -289,9 +289,9 @@
 					</div>
 				</div>
 
-				<section class="link-penting">
+				<section class="partnership">
 						<div class="container">
-							<h2 style="font-family:Open Sans">Link Penting</h2>
+							<h2 style="font-family:Open Sans">Partnership</h2>
 							<br/>
 							<div class="row">
 								<div class="gallery-partners">
@@ -301,7 +301,7 @@
 												<ul class="list-partners">
 													<li>
 														<a href="404.html" title="Starlive Light EVO">
-															<img src="aset/img/SaintAulia-LogoPNG.png" alt="image" width="118" height="115">
+															<img src="aset/img/SaintAulia-LogoPNG.png" alt="image" width="95" height="90">
 														</a>
 													</li>
 													<li class="last">&nbsp;</li>
@@ -309,11 +309,6 @@
 											</li>
 										</ul>
 									</div>
-									<ul class="switcher">
-										<li class="active"><a href="#">switcher</a></li><li>
-											<a href="#">switcher</a></li><li>
-											<a href="#">switcher</a></li>
-									</ul>
 								</div>
 							</div>
 						</div>
@@ -336,6 +331,7 @@
 									<li><a href="project.html">Project</a></li>
 									<li><a href="certificate.html">Certificate</a></li>
 									<li><a href="gallery.html">Gallery</a></li>
+									<li><a href="contact.html">Contact</a></li>
 								</ul>
 							</div>
 						</div>
