--- a/projects.html
+++ b/projects.html
@@ -7,7 +7,7 @@
         <meta name="author" content="" />
         <title>Novita Risdanti</title>
         <!-- Favicon-->
-        <link rel="icon" href="assets/image.png">
+        <link rel="icon" href="assets/NO Reflect WM.png">
         <!-- Custom Google font-->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
