--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
                                 <div class="fs-3 fw-light text-muted">Welcome to my Page!</div>
                                 <h1 class="display-3 fw-bolder mb-5"><span class="text-gradient d-inline">Let's get to know me!</span></h1>
                                 <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xxl-start mb-3">
-                                    <a class="btn btn-primary btn-lg px-5 py-3 me-sm-3 fs-6 fw-bolder" href="resume.html">Resume</a>
-                                    <a class="btn btn-outline-dark btn-lg px-5 py-3 fs-6 fw-bolder" href="projects.html">Projects</a>
+                                    <a class="btn btn-primary btn-lg px-10 py-8 me-sm-3 fs-6 fw-bolder" href="resume.html">Me</a>
+                                    <a class="btn btn-outline-dark btn-lg px-10 py-8 fs-6 fw-bolder" href="projects.html">Starlive Light</a>
                                 </div>
                             </div>
                         </div>
@@ -200,7 +200,7 @@
         <footer class="bg-white py-4 mt-auto">
             <div class="container px-5">
                 <div class="row align-items-center justify-content-between flex-column flex-sm-row">
-                    <div class="col-auto"><div class="small m-0">Copyright &copy; Danny Aulia Portfolio 2024</div></div>
+                    <div class="col-auto"><div class="small m-0">Copyright &copy; Danny Aulia 2024</div></div>
                     <div class="col-auto">
                         <a class="small" href="#!">Privacy</a>
                         <span class="mx-1">&middot;</span>
