--- a/resume.html
+++ b/resume.html
@@ -7,7 +7,7 @@
         <meta name="author" content="" />
         <title>Danny Aulia</title>
         <!-- Favicon-->
-        <link rel="icon" href="assets/Logo Zeta.jpeg">
+        <link rel="icon" href="assets/NO Reflect WM.jpeg">
         <!-- Custom Google font-->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -29,7 +29,6 @@
                             <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                             <li class="nav-item"><a class="nav-link" href="resume.html">Resume</a></li>
                             <li class="nav-item"><a class="nav-link" href="projects.html">Projects</a></li>
-                            <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                         </ul>
                     </div>
                 </div>
@@ -129,7 +128,7 @@
                                 <div class="card-body p-5">
                                     <div class="row align-items-center gx-5">
                                         <div class="col text-center text-lg-start mb-4 mb-lg-0">
-                                            <div class="bg-light p-4 rounded-4">
+                                            <div class="bg-light p-2 rounded-2">
                                                 <div class="text-secondary fw-bolder mb-2">September 2020 - August 2024</div>
                                                 <div class="mb-2">
                                                     <div class="small fw-bolder">Telkom University</div>
@@ -141,7 +140,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="col-lg-8"><div>Activities and societies: Practicum Assistant at Telkom University's MBC Laboratory. Member of Financial Division at PMK Telkom University. Member of Orgata Division at KSR PMI Unit Telkom University</div></div>
+                                        <div class="col-lg-8"><div>Activities and societies: Practicum Assistant of MBC Laboratory. Head Assistant of SPIS Laboratory. Head Division of Championship Regeneration 2021. Exhibition Presenter of 32th Anniversary Telkom University</div></div>
                                     </div>
                                 </div>
                             </div>
@@ -150,19 +149,19 @@
                                 <div class="card-body p-5">
                                     <div class="row align-items-center gx-5">
                                         <div class="col text-center text-lg-start mb-4 mb-lg-0">
-                                            <div class="bg-light p-4 rounded-4">
+                                            <div class="bg-light p-2 rounded-2">
                                                 <div class="text-secondary fw-bolder mb-2">July 2016 - June 2019</div>
                                                 <div class="mb-2">
                                                     <div class="small fw-bolder">SMA Labschool Cibubur</div>
                                                     <div class="small text-muted">Bekasi, West Java, Indonesia</div>
                                                 </div>
-                                                <div class="fst-italic">
+                                                <div class="bg-light p-4 rounded-4 fst-italic">
                                                     <div class="small text-muted">Graduate</div>
-                                                    <div class="small text-muted">Science Program</div>
+                                                    <div class="small text-muted">Nature Science</div>
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="col-lg-8"><div>Activities and societies: English Short Story High School Competition. Member of Recistroops's Go Green Movement, part of OSIS Regina Pacis</div></div>
+                                        <div class="col-lg-8"><div>Activities and societies: Member of Labschool Cibubur Islamic Affairs.</div></div>
                                     </div>
                                 </div>
                             </div>
@@ -174,21 +173,20 @@
                             <!-- Skillset Card-->
                             <div class="card shadow border-0 rounded-4 mb-5">
                                 <div class="card-body p-5">
-                                    <!-- Professional skills list-->
+                                    <!-- Skills list-->
                                     <div class="mb-5">
                                         <div class="d-flex align-items-center mb-4">
                                             <div class="feature bg-primary bg-gradient-primary-to-secondary text-white rounded-3 me-3"><i class="bi bi-tools"></i></div>
-                                            <h3 class="fw-bolder mb-0"><span class="text-gradient d-inline">Professional Skills</span></h3>
+                                            <h3 class="fw-bolder mb-0"><span class="text-gradient d-inline">Skills</span></h3>
                                         </div>
                                         <div class="row row-cols-1 row-cols-md-3 mb-4">
-                                            <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Telecommunication Engineering</div></div>
-                                            <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Basic Linux</div></div>
-                                            <div class="col"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Web Development</div></div>
+                                            <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Network</div></div>
+                                            <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Cybersecurity</div></div>
+                                            <div class="col"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Machine Learning</div></div>
                                         </div>
                                         <div class="row row-cols-1 row-cols-md-3">
-                                            <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Cloud Computing</div></div>
-                                            <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Front End Design</div></div>
-                                            <div class="col"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Google Cloud Platfrom</div></div>
+                                            <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Web Development</div></div>
+                                            <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Front-End Design</div>
                                         </div>
                                     </div>
                                     <!-- Languages list-->
@@ -198,13 +196,9 @@
                                             <h3 class="fw-bolder mb-0"><span class="text-gradient d-inline">Languages</span></h3>
                                         </div>
                                         <div class="row row-cols-1 row-cols-md-3 mb-4">
-                                            <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">HTML</div></div>
-                                            <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">CSS</div></div>
-                                            <div class="col"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">JavaScript</div></div>
-                                        </div>
-                                        <div class="row row-cols-1 row-cols-md-3">
-                                            <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Python</div></div>
-                                            <div class="col"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">...</div></div>
+                                            <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Indonesia</div></div>
+                                            <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">English</div></div>
+                                            <div class="col"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Japanese</div></div>
                                         </div>
                                     </div>
                                 </div>
@@ -218,7 +212,7 @@
         <footer class="bg-white py-4 mt-auto">
             <div class="container px-5">
                 <div class="row align-items-center justify-content-between flex-column flex-sm-row">
-                    <div class="col-auto"><div class="small m-0">Copyright &copy; Danny Aulia Portfolio 2023</div></div>
+                    <div class="col-auto"><div class="small m-0">Copyright &copy; Danny Aulia 2024</div></div>
                     <div class="col-auto">
                         <a class="small" href="#!">Privacy</a>
                         <span class="mx-1">&middot;</span>
