--- a/resume.html
+++ b/resume.html
@@ -63,12 +63,11 @@
                                                 <div class="small text-muted">Bandung, West Java, Indonesia</div>
                                             </div>
                                         </div>
-                                        <div class="col-lg-8"><div>An independent study program, the Cloud Computing Learning Path. Receive competency certificates in each class in the Cloud Computing Learning Path if successfully pass each test/assessment held for each competency. After participating in this program, are prepared to take the Associate Cloud Engineer global certification exam from Google which can be taken after completing all of this Certified Independent Study material.</div></div>
+                                        <div class="col-lg-8"><div>...</div></div>
                                     </div>
                                 </div>
                             </div>
                             <!-- Experience Card 2-->
-                           
                             <div class="card shadow border-0 rounded-4 mb-5">
                                 <div class="card-body p-5">
                                     <div class="row align-items-center gx-5">
@@ -80,7 +79,23 @@
                                                 <div class="small text-muted">Bandung, West Java, Indonesia</div>
                                             </div>
                                         </div>
-                                        <div class="col-lg-8"><div>Coordinate the research assistants and its members, person in charge of making decision for the financial matter in PMK TES. Planning funding and business program to fulfill entire PMK TES 2022 financial necessity. Manage evidence of expenditure and income of funds with a good funding system and monthly financial report</div></div>
+                                        <div class="col-lg-8"><div>...</div></div>
+                                    </div>
+                                </div>
+                            </div>
+                            
+                            <div class="card shadow border-0 rounded-4 mb-5">
+                                <div class="card-body p-5">
+                                    <div class="row align-items-center gx-5">
+                                        <div class="col text-center text-lg-start mb-4 mb-lg-0">
+                                            <div class="bg-light p-4 rounded-4">
+                                                <div class="text-primary fw-bolder mb-2">July 2023 - September 2023</div>
+                                                <div class="small fw-bolder">Commitee: ASEAN Indonesia 2023</div>
+                                                <div class="small text-muted">Telkom Indonesia</div>
+                                                <div class="small text-muted">South Jakarta, DKI Jakarta, Indonesia</div>
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-8"><div>...</div></div>
                                     </div>
                                 </div>
                             </div>
@@ -90,13 +105,13 @@
                                     <div class="row align-items-center gx-5">
                                         <div class="col text-center text-lg-start mb-4 mb-lg-0">
                                             <div class="bg-light p-4 rounded-4">
-                                                <div class="text-primary fw-bolder mb-2">Aug 2022 - Present</div>
-                                                <div class="small fw-bolder">Practicum Assistant of Cyber Physical System Laboratory</div>
-                                                <div class="small text-muted">Cyber Physical System Laboratory</div>
+                                                <div class="text-primary fw-bolder mb-2">June 2023 - November 2023</div>
+                                                <div class="small fw-bolder">Research Intern: Kedaireka 2023</div>
+                                                <div class="small text-muted">PT MetaVision Inovasi Indonesia</div>
                                                 <div class="small text-muted">Bandung, West Java, Indonesia</div>
                                             </div>
                                         </div>
-                                        <div class="col-lg-8"><div>Teaching junior telecommunication engineers as a practicum assistant about Cisco, GNS3, VoIP, and Network Simulator. Compiling six practicum modules for regular and international class for one semester worth. Shares knowledge about Basic Linux, Internet of Things, Web Development, and UI/UX Design.</div></div>
+                                        <div class="col-lg-8"><div>...</div></div>
                                     </div>
                                 </div>
                             </div>
@@ -107,12 +122,12 @@
                                         <div class="col text-center text-lg-start mb-4 mb-lg-0">
                                             <div class="bg-light p-4 rounded-4">
                                                 <div class="text-primary fw-bolder mb-2"> September 2020 - December 2020</div>
-                                                <div class="small fw-bolder">Project-Based Intern : UX Researcher Virtual Internship Experience Telkom Digital Amoeba</div>
+                                                <div class="small fw-bolder">Surveyor</div>
                                                 <div class="small text-muted">PT LAPI ITB</div>
                                                 <div class="small text-muted">Bandung, West Java, Indonesia</div>
                                             </div>
                                         </div>
-                                        <div class="col-lg-8"><div>Finishing various task and responsibilities related with the activity of UX Researcher from Telkom Digital ..., such as Design Thinking UI and UX, Creating User Persona, and Usability Testing Implementation.</div></div>
+                                        <div class="col-lg-8"><div>F...</div></div>
                                     </div>
                                 </div>
                             </div>
@@ -140,7 +155,11 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="col-lg-8"><div>Activities and societies: Practicum Assistant of MBC Laboratory. Head Assistant of SPIS Laboratory. Head Division of Championship Regeneration 2021. Exhibition Presenter of 32th Anniversary Telkom University</div></div>
+                                        <div class="col-lg-8"><div>Activities: Practicum Assistant of MBC Laboratory. Head Assistant of SPIS Laboratory. Head Division of Championship Regeneration 2021. Exhibition Presenter of 32th Anniversary Telkom University</div></div>
+                                        <div class="col-lg-8"><div>Practicum Assistant of MBC Laboratory</div></div>
+                                        <div class="col-lg-8"><div>Head Assistant of SPIS Laboratory</div></div>
+                                        <div class="col-lg-8"><div>Head Division of Championship Regeneration 2021</div></div>
+                                        <div class="col-lg-8"><div>Exhibition Presenter of 32th Anniversary Telkom University</div></div>
                                     </div>
                                 </div>
                             </div>
@@ -153,7 +172,7 @@
                                                 <div class="text-secondary fw-bolder mb-2">July 2016 - June 2019</div>
                                                 <div class="mb-2">
                                                     <div class="small fw-bolder">SMA Labschool Cibubur</div>
-                                                    <div class="small text-muted">Bekasi, West Java, Indonesia</div>
+                                                    <div class="small fw-bolder text-muted">Bekasi, West Java, Indonesia</div>
                                                 </div>
                                                 <div class="bg-light p-4 rounded-4 fst-italic">
                                                     <div class="small text-muted">Graduate</div>
@@ -161,7 +180,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="col-lg-8"><div>Activities and societies: Member of Labschool Cibubur Islamic Affairs.</div></div>
+                                        <div class="col-lg-8"><div>Activities: Member of Labschool Cibubur Islamic Affairs.</div></div>
                                     </div>
                                 </div>
                             </div>
