--- a/resume.html
+++ b/resume.html
@@ -127,7 +127,7 @@
                                                 <div class="small text-muted">Bandung, West Java, Indonesia</div>
                                             </div>
                                         </div>
-                                        <div class="col-lg-8"><div>F...</div></div>
+                                        <div class="col-lg-8"><div>...</div></div>
                                     </div>
                                 </div>
                             </div>
@@ -147,15 +147,15 @@
                                                 <div class="text-secondary fw-bolder mb-2">September 2020 - August 2024</div>
                                                 <div class="mb-2">
                                                     <div class="small fw-bolder">Telkom University</div>
-                                                    <div class="small text-muted">Bandung, West Java, Indonesia</div>
+                                                    <div class="small fw-bolder text-muted">Bandung, West Java, Indonesia</div>
                                                 </div>
-                                                <div class="fst-italic">
+                                                <div class="bg-light p-4 rounded-4 fst-italic">
                                                     <div class="small text-muted">Bachelor Degree</div>
                                                     <div class="small text-muted">Telecommunication Engineering</div>
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="col-lg-8"><div>Activities: Practicum Assistant of MBC Laboratory. Head Assistant of SPIS Laboratory. Head Division of Championship Regeneration 2021. Exhibition Presenter of 32th Anniversary Telkom University</div></div>
+                                        <div class="col-lg-8"><div>Activities:</div></div>
                                         <div class="col-lg-8"><div>Practicum Assistant of MBC Laboratory</div></div>
                                         <div class="col-lg-8"><div>Head Assistant of SPIS Laboratory</div></div>
                                         <div class="col-lg-8"><div>Head Division of Championship Regeneration 2021</div></div>
@@ -164,12 +164,12 @@
                                 </div>
                             </div>
                             <!-- Education Card 2-->
-                            <div class="card shadow border-0 rounded-4 mb-5">
+                            <div class="card shadow border-0 rounded-4 mb-5 w-100">
                                 <div class="card-body p-5">
                                     <div class="row align-items-center gx-5">
                                         <div class="col text-center text-lg-start mb-4 mb-lg-0">
                                             <div class="bg-light p-2 rounded-2">
-                                                <div class="text-secondary fw-bolder mb-2">July 2016 - June 2019</div>
+                                                <div class="text-secondary fw-bolder mb-3">July 2016 - June 2019</div>
                                                 <div class="mb-2">
                                                     <div class="small fw-bolder">SMA Labschool Cibubur</div>
                                                     <div class="small fw-bolder text-muted">Bekasi, West Java, Indonesia</div>
