--- a/resume.html
+++ b/resume.html
@@ -139,7 +139,7 @@
                         <section>
                             <h2 class="text-secondary fw-bolder mb-4">Education</h2>
                             <!-- Education Card 1-->
-                            <div class="card shadow border-0 rounded-4 mb-5">
+                            <div class="card shadow border-0 rounded-4 mb-5 w-100">
                                 <div class="card-body p-5">
                                     <div class="row align-items-center gx-5">
                                         <div class="col text-center text-lg-start mb-4 mb-lg-0">
@@ -155,16 +155,17 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="col-lg-8"><div>Activities:</div></div>
-                                        <div class="col-lg-8"><div>Practicum Assistant of MBC Laboratory</div></div>
-                                        <div class="col-lg-8"><div>Head Assistant of SPIS Laboratory</div></div>
-                                        <div class="col-lg-8"><div>Head Division of Championship Regeneration 2021</div></div>
-                                        <div class="col-lg-8"><div>Exhibition Presenter of 32th Anniversary Telkom University</div></div>
+                                        <div class="col-lg-8"><div>Activities:
+                                            <p>Practicum Assistant of MBC Laboratory</p>
+                                            <p>Head Assistant of SPIS Laboratory</p>
+                                            <p>Head Division of Championship Regeneration 2021</p>
+                                            <p>Exhibition Presenter of 32th Anniversary Telkom Uuniversity</p>
+                                        </div></div>
                                     </div>
                                 </div>
                             </div>
                             <!-- Education Card 2-->
-                            <div class="card shadow border-0 rounded-4 mb-5 w-100">
+                            <div class="card shadow border-0 rounded-4 mb-5 w-30">
                                 <div class="card-body p-5">
                                     <div class="row align-items-center gx-5">
                                         <div class="col text-center text-lg-start mb-4 mb-lg-0">
