--- a/resume.html
+++ b/resume.html
@@ -155,12 +155,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="col-lg-8"><div>Activities:
-                                            <p>Practicum Assistant of MBC Laboratory</p>
-                                            <p>Head Assistant of SPIS Laboratory</p>
-                                            <p>Head Division of Championship Regeneration 2021</p>
-                                            <p>Exhibition Presenter of 32th Anniversary Telkom Uuniversity</p>
-                                        </div></div>
+                                        <div class="col-lg-8"><div>Activities: Practicum Assistant of MBC Laboratory, Head Assistant of SPIS Laboratory, Head Division of Championship Regeneration 2021, Exhibition Presenter of 32th Anniversary Telkom University</div></div>
                                     </div>
                                 </div>
                             </div>
