--- a/resume.html
+++ b/resume.html
@@ -7,7 +7,7 @@
         <meta name="author" content="" />
         <title>Danny Aulia</title>
         <!-- Favicon-->
-        <link rel="icon" href="assets/NO Reflect WM.jpeg">
+        <link rel="icon" href="assets/NO Reflect WM.png">
         <!-- Custom Google font-->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -144,7 +144,7 @@
                                     <div class="row align-items-center gx-5">
                                         <div class="col text-center text-lg-start mb-4 mb-lg-0">
                                             <div class="bg-light p-2 rounded-2">
-                                                <div class="text-secondary fw-bolder mb-2">September 2020 - August 2024</div>
+                                                <div class="text-danger fw-bolder mb-4">September 2020 - August 2024</div>
                                                 <div class="mb-2">
                                                     <div class="small fw-bolder">Telkom University</div>
                                                     <div class="small fw-bolder text-muted">Bandung, West Java, Indonesia</div>
@@ -165,7 +165,7 @@
                                     <div class="row align-items-center gx-5">
                                         <div class="col text-center text-lg-start mb-4 mb-lg-0">
                                             <div class="bg-light p-2 rounded-2">
-                                                <div class="text-secondary fw-bolder mb-3">July 2016 - June 2019</div>
+                                                <div class="text-danger fw-bolder mb-4">July 2016 - June 2019</div>
                                                 <div class="mb-2">
                                                     <div class="small fw-bolder">SMA Labschool Cibubur</div>
                                                     <div class="small fw-bolder text-muted">Bekasi, West Java, Indonesia</div>
@@ -199,7 +199,7 @@
                                             <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Cybersecurity</div></div>
                                             <div class="col"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Machine Learning</div></div>
                                         </div>
-                                        <div class="row row-cols-1 row-cols-md-3">
+                                        <div class="row row-cols-1 row-cols-md-3 mb-4">
                                             <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Web Development</div></div>
                                             <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Front-End Design</div>
                                         </div>
