--- a/resume.html
+++ b/resume.html
@@ -155,7 +155,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="col-lg-8"><div>Activities: Practicum Assistant of MBC Laboratory, Head Assistant of SPIS Laboratory, Head Division of Championship Regeneration 2021, Exhibition Presenter of 32th Anniversary Telkom University</div></div>
+                                        <div class="col-lg-8"><div>Activities: Practicum Assistant of MBC Laboratory, Head Assistant of SPIS Laboratory, Head Division of Championship Regeneration 2021, Exhibition Presenter of 32nd Anniversary Telkom University.</div></div>
                                     </div>
                                 </div>
                             </div>
@@ -190,27 +190,27 @@
                                 <div class="card-body p-5">
                                     <!-- Skills list-->
                                     <div class="mb-5">
-                                        <div class="d-flex align-items-center mb-4">
+                                        <div class="d-flex align-items-center mb-5">
                                             <div class="feature bg-primary bg-gradient-primary-to-secondary text-white rounded-3 me-3"><i class="bi bi-tools"></i></div>
                                             <h3 class="fw-bolder mb-0"><span class="text-gradient d-inline">Skills</span></h3>
                                         </div>
-                                        <div class="row row-cols-1 row-cols-md-3 mb-4">
+                                        <div class="row row-cols-1 row-cols-md-3 mb-5">
                                             <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Network</div></div>
                                             <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Cybersecurity</div></div>
                                             <div class="col"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Machine Learning</div></div>
                                         </div>
-                                        <div class="row row-cols-1 row-cols-md-3 mb-4">
+                                        <div class="row row-cols-1 row-cols-md-3 mb-5">
                                             <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Web Development</div></div>
                                             <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Front-End Design</div>
                                         </div>
                                     </div>
                                     <!-- Languages list-->
-                                    <div class="mb-0">
-                                        <div class="d-flex align-items-center mb-4">
+                                    <div class="mb-5">
+                                        <div class="d-flex align-items-center mb-5">
                                             <div class="feature bg-primary bg-gradient-primary-to-secondary text-white rounded-3 me-3"><i class="bi bi-code-slash"></i></div>
                                             <h3 class="fw-bolder mb-0"><span class="text-gradient d-inline">Languages</span></h3>
                                         </div>
-                                        <div class="row row-cols-1 row-cols-md-3 mb-4">
+                                        <div class="row row-cols-1 row-cols-md-3 mb-5">
                                             <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Indonesia</div></div>
                                             <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">English</div></div>
                                             <div class="col"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Japanese</div></div>
@@ -228,13 +228,6 @@
             <div class="container px-5">
                 <div class="row align-items-center justify-content-between flex-column flex-sm-row">
                     <div class="col-auto"><div class="small m-0">Copyright &copy; Danny Aulia 2024</div></div>
-                    <div class="col-auto">
-                        <a class="small" href="#!">Privacy</a>
-                        <span class="mx-1">&middot;</span>
-                        <a class="small" href="#!">Terms</a>
-                        <span class="mx-1">&middot;</span>
-                        <a class="small" href="#!">Contact</a>
-                    </div>
                 </div>
             </div>
         </footer>
