--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="author" content="" />
         <title>Danny Aulia</title>
         <!-- Favicon-->
-        <link rel="icon" href="assets/img/NO Reflect WM.png">
+        <link rel="icon" href="assets/img/SaintAulia-LogoPNG.png">
         <!-- Custom Google font-->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -42,11 +42,11 @@
                             <!-- Header text content-->
                             <div class="text-center text-xxl-start">
                                 <div class="badge bg-gradient-primary-to-secondary text-white mb-4"><div class="text-uppercase"> Telecommunication Engineering </div></div>
-                                <div class="fs-3 fw-light text-muted">Welcome to my Page!</div>
-                                <h1 class="display-3 fw-bolder mb-5"><span class="text-gradient d-inline">Let's get to know me!</span></h1>
+                                <div class="fs-3 fw-light text-muted">Welcome to my Portfolio!</div>
+                                <h1 class="display-3 fw-bolder mb-5"><span class="text-gradient d-inline">Let's get to know myself!</span></h1>
                                 <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xxl-start mb-3">
-                                    <a class="btn btn-primary btn-lg px-3 py-2 me-sm-3 fs-4 fw-bolder" href="resume.html">Me</a>
-                                    <a class="btn btn-outline-dark btn-lg px-3 py-2 fs-4 fw-bolder" href="projects.html">Starlive Light</a>
+                                    <a class="btn btn-primary btn-lg px-5 py-3 me-sm-3 fs-6 fw-bolder" href="resume.html">Resume</a>
+                                    <a class="btn btn-outline-dark btn-lg px-5 py-3 fs-6 fw-bolder" href="projects.html">Projects</a>
                                 </div>
                             </div>
                         </div>
@@ -56,7 +56,7 @@
                                 <div class="profile bg-gradient-primary-to-secondary">
                                     <!-- TIP: For best results, use a photo with a transparent background like the demo example below-->
                                     <!-- Watch a tutorial on how to do this on YouTube (link)-->
-                                    <img class="profile-img" src="assets/img/SHF3.png" alt="..." />
+                                    <img class="profile-img" src="assets/img/SHF2.png" alt="..." />
                                     <div class="dots-1">
                                         <!-- SVG Dots-->
                                         <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 191.6 1215.4" style="enable-background: new 0 0 191.6 1215.4" xml:space="preserve">
@@ -183,12 +183,11 @@
                             <div class="text-center my-5">
                                 <h2 class="display-5 fw-bolder"><span class="text-gradient d-inline">About Me</span></h2>
                                 <p class="lead fw-light mb-4">My name is Danny Aulia</p>
-                                <p class="text-muted">Bachelor of Telecommunication Engineering major at Telkom University with GPA 3.54. I’m a dedicated, strong willed, hard-working person, and also a fast learner.</p>
+                                <p class="text-muted">Bachelor of Telecommunication Engineering at Telkom University with GPA of 3.54. I am a dedicated learner, flexible, able to work in teams and adapt well. I have experience in organizational leadership, project-based internships, and practical teaching.</p>
                                 <div class="d-flex justify-content-center fs-2 gap-4">
                                     <a class="text-gradient" href="https://www.instagram.com/dannyauliaa/"><i class="bi bi-instagram"></i></a>
                                     <a class="text-gradient" href="https://www.linkedin.com/in/danny-aulia/"><i class="bi bi-linkedin"></i></a>
                                     <a class="text-gradient" href="https://github.com/dannyauliaa"><i class="bi bi-github"></i></a>
-                                    <a class="text-gradient" href="https://bento.me/dannyauliaa"><i class="bi bi-bento.me"></i></a>
                                 </div>
                             </div>
                         </div>
